--- a/.github/workflows/rust-xous-release.yml
+++ b/.github/workflows/rust-xous-release.yml
@@ -38,20 +38,20 @@ jobs:
         run: |
           export RUST_COMPILER_RT_ROOT=$(pwd)/src/llvm-project/compiler-rt \
           && rm -rf target \
-          && sed -i '/^#define CRT_HAS_128BIT/d' src/llvm-project/compiler-rt/lib/builtins/int_types.h \
           && cargo build \
             --target riscv32imac-unknown-xous-elf \
             -Zbinary-dep-depinfo \
             --release \
-            --features "panic-unwind compiler-builtins-c compiler-builtins-mem" \
+            --features "panic-unwind llvm-libunwind backtrace compiler-builtins-c compiler-builtins-mem" \
             --manifest-path "library/sysroot/Cargo.toml" \
           && cp target/riscv32imac-unknown-xous-elf/release/deps/*.rlib $(rustc --print sysroot)/lib/rustlib/riscv32imac-unknown-xous-elf/lib \
           && (dest=$(pwd) && cd $(rustc --print sysroot) && zip -r ${dest}/riscv32imac-unknown-xous_${{ steps.extract_rust_version.outputs.version }}.zip lib/rustlib/riscv32imac-unknown-xous-elf/)
         env:
-          CARGO_PROFILE_RELEASE_DEBUG: 0
-          CARGO_PROFILE_RELEASE_DEBUG_ASSERTIONS: true
+          CARGO_PROFILE_RELEASE_DEBUG: 2
+          CARGO_PROFILE_RELEASE_OPT_LEVEL: 3
+          CARGO_PROFILE_RELEASE_DEBUG_ASSERTIONS: false
           RUSTC_BOOTSTRAP: 1
-          RUSTFLAGS: -Cforce-unwind-tables=yes -Cembed-bitcode=yes
+          RUSTFLAGS: -Csymbol-mangling-version=legacy -Zunstable-options -Zmacro-backtrace -Clink-args=-Wl,-z,origin -Clink-args=-Wl,-rpath,$ORIGIN/../lib -Csplit-debuginfo=off -Cprefer-dynamic -Cllvm-args=-import-instr-limit=10 -Zinline-mir -Cembed-bitcode=yes -Clto=off -Cforce-unwind-tables=yes
           __CARGO_DEFAULT_LIB_METADATA: stablestd
           CC: riscv-none-embed-gcc
           AR: riscv-none-embed-ar
